[project]
name = "fakultest"
version = "0.1.0"
description = ""
authors = [
    {name = "Gerd Eickelpasch", email = "gerd.eickelpasch@gmail.com"},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.4.3",
    "setuptools>=69.0.2",
]
